--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2003-05-26  Alexander Hollinger <alexander.hollinger@gmx.net>
+2003-09-21  Alexander Hollinger <alexander.hollinger@gmx.net>
 
 	* view.c (titleScreenDisplay): changed MAX_NUMBER_HIGHSCORE_ENTRIES
           to MAX_HIGHSCORE_ENTRIES.
@@ -8,6 +8,10 @@
 	  highscore from litte-endian to big-endian machines.
 
 	* highscore.h: adjusted declarations
+
+	* file.c: removed from cvs-repository
+
+	* file.h: removed from cvs-repository
 
 
 2003-09-18  Sebastian Gutsfeld  <segoh@gmx.net>
