--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-14  Alexander Hollinger <alexander.hollinger@gmx.net>
+	* LICENSE: renamed gpl.txt to LICENSE
+	* added configure-script: Makefile.in, config.h.in, configure
+	  configure.in
+
+
 2003-09-21  Alexander Hollinger <alexander.hollinger@gmx.net>
 
 	* view.c (titleScreenDisplay): changed MAX_NUMBER_HIGHSCORE_ENTRIES
