--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 	* nInvaders.c: fixed different lives, weite, level, and skill_level
 	  variables in objects.
 
+	* aliens.c: fixed warning: iteration 10u invokes undefined behavior on
+	  lowest_ship.
+
 2003-10-14  Alexander Hollinger <alexander.hollinger@gmx.net>
 	* LICENSE: renamed gpl.txt to LICENSE
 	* added configure-script: Makefile.in, config.h.in, configure
